

## [Unreleased]
### Added
- [API_PARSER] [PERCEPTION_POINT_XRAY] New collector
- [API_PARSER] [EXTRAHOP] New collector
### Changed
- [DEPENDENCIES]
  - cryptography 43.0.1 -> 44.0.2
  - django 4.2.18 -> 4.2.20
  - djongo 1.3.7 -> 1.3.7.2
  - gunicorn 22.0.0 -> 23.0.0
  - jinja2 3.1.3 -> 3.1.6
  - sqlparse 0.4.4 -> 0.5.3
### Fixed
- [API_PARSER] [WAF_CLOUDFLARE] Avoid querying the API with data from more than a week ago
- [API_PARSER] [CISCO_DUO] Increment time pointer by 1s at the end of a run to avoid duplicates
- [API_PARSER] [TRENDMICRO_VISIONONE] Add retries and check for total count
- [FRONTEND] Hot-disable a collector manually


## [2.23.0] - 2025-03-28
### Added
- [SYSTEM] [PATHS] Variabilize all system paths and allow to configure them from settings
- [SYSTEM] [SETTINGS] Allow to configure project with django-environ
- [TESTS] [SYSTEM] Implement Network test cases
- [TESTS] [WORKFLOW] Implement Workflow test cases
- [API_PARSER] [GATEWATCHER_ALERTS] Add 'host' field in json logs (requested url's domain)
- [API_PARSER] [ARMIS_CENTRIX] New collector for Armis Centrix EDR (Alerts & Activity)
- [TIMEZONE] Allow to calculate current timezone offset for logs received on a Frontend
- [COMMANDS] Add a command to manually regenerate the new timezone DBs for Rsyslog
### Removed
- [TESTS] Remove old 'testing' folder
### Changed
- [SYSTEM] [SETTINGS] Use Hostname value from Django settings
- [PKI] Generate a random serial for each new certificate
- [API_PARSER] [VARONIS] Change the format of logs to avoid empty fields and to make the parsing easier
- [API_PARSER] [VARONIS] DElay next request when receiving 304 errors
- [COMMANDS] Ensure logs are written on stdout as well as in corresponding logging files
### Fixed
- [SERVICES] [FRONTEND] Only show node field for specific modes
- [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
- [API_PARSER] [WAF_CLOUDFLARE] Fix invalid time range requested for UTC-* consoles